--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Posuere sollicitudin aliquam ultrices sagittis orci a. Diam maecenas ultricies mi eget.
                 Non sodales neque sodales ut etiam sit.
             </p>
-            <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+            <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
            </div>
            <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="" />
         </div>
@@ -155,6 +155,145 @@
        </div>
     </div> 
  </section>
+
+ <!-- Question Accordion -->
+ <section id="questions" class="p-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+    <div class="accordion accordion-flush" id="questions">
+      <!-- item 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+            Where exactly are you located?
+          </button>
+        </h2>
+        <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae cupiditate ipsam veritatis beatae saepe soluta earum corporis odio necessitatibus! Ut libero esse nam vitae blanditiis corporis voluptatibus voluptates labore quae quibusdam incidunt possimus cum fugiat excepturi cumque necessitatibus nobis ab natus molestiae, aliquid magni eos fuga amet. Voluptatum, dolor veritatis! <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        </div>
+      </div>
+      <!-- Item 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+            How muh does it cost to attend?
+          </button>
+        </h2>
+        <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae cupiditate ipsam veritatis beatae saepe soluta earum corporis odio necessitatibus! Ut libero esse nam vitae blanditiis corporis voluptatibus voluptates labore quae quibusdam incidunt possimus cum fugiat excepturi cumque necessitatibus nobis ab natus molestiae, aliquid magni eos fuga amet. Voluptatum, dolor veritatis! <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        </div>
+      </div>
+      <!-- Item 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+            What do I need to know?
+          </button>
+        </h2>
+        <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae cupiditate ipsam veritatis beatae saepe soluta earum corporis odio necessitatibus! Ut libero esse nam vitae blanditiis corporis voluptatibus voluptates labore quae quibusdam incidunt possimus cum fugiat excepturi cumque necessitatibus nobis ab natus molestiae, aliquid magni eos fuga amet. Voluptatum, dolor veritatis! <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>
+ 
+ <section id="instructors" class="p-5 bg-primary">
+  <div class="container">
+    <h2 class="text-center text-white">Our Instructors</h2>
+    <p class="lead text-center text-white mb-5">
+      All our instructors have 5+ years of experiance
+    </p>
+    <div class="row gap-4">
+      <div class="col-md-6 col-lg-12">
+        <div class="card bg-light">
+          <div class="card-body text-center">
+            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt=""/>
+            <h3 class="card-title mb-3">Bent Dover</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusamus, quaerat iste quisquam vitae provident.</p>
+            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i>
+            </a>
+            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i>
+            </a>
+            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
+ </section>
+
+ <!-- Contact -->
+ <section class="p-5">
+   <div class="container">
+    <div class="row g-4">
+      <div class="col-md">
+        <h2 class="text-center mb-4">Contact Info</h2>
+        <ul class="list-group list-group-flush lead">
+          <li class="list-group-tiem">
+            <span class="fw-bold">Main Location:</span> 3650 Ølstykke Danmark
+          </li>
+          <li class="list-group-tiem">
+            <span class="fw-bold">Telf Nummer:</span> +45 23 40 50 56
+          </li>
+          <li class="list-group-tiem">
+            <span class="fw-bold">E-mail Adresse:</span> Jonassw123@outlook.dk
+          </li>
+        </ul>
+      </div>
+      <img class="img-fluid w-50 d-none d-sm-block" src="img/contact.svg" alt="" />
+     </div>
+    </div> 
+   </div>
+ </section>
+
+ <!-- Footer -->
+ <footer class="p-5 bg-dark text-white text-center position-relative">
+   <div class="container">
+     <p class="lead">Copyright &copy; 2023 Jonas Website</p>
+
+     <a href="#" class="position-absolute bottom-0 end-0 p-5">
+    <i class="bi bi-arrow-up-circle h1"></i></a>
+   </div>
+</footer>
+
+<!-- Modal -->
+<div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="enrollLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="lead">Fill out this form</p>
+        <form action="">
+          <div class="mb-3">
+            <label for="first-name" class="col-form-label">First Name:</label>
+            <input type="text" class="form-control" id="first-name">
+          </div>
+          <div class="mb-3">
+            <label for="last-name" class="col-form-label">Last Name:</label>
+            <input type="text" class="form-control" id="last-name">
+          </div>
+          <div class="mb-3">
+            <label for="email-name" class="col-form-label">E-mail:</label>
+            <input type="text" class="form-control" id="email-name">
+          </div>
+          <div class="mb-3">
+            <label for="phone-name" class="col-form-label">Telf Nummer:</label>
+            <input type="text" class="form-control" id="phone-name">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
