--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <div class="col-md-6 col-lg-12">
         <div class="card bg-light">
           <div class="card-body text-center">
-            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt=""/>
+            <img src="img\headshot.jpeg" width="80" height="100" class="rounded-circle mb-3" alt=""/>
             <h3 class="card-title mb-3">Jonas Sommer Weber</h3>
             <p class="card-text">Mit navn er Jonas Sommer Weber, og jeg er 22 år gammel.<br> Jeg bor i Ølstykke, hvor jeg går i skole praktik på TEC Ballerup.
 
